tests/machine/x/st/tree_sum.out
Object: Association new "<0x7f668082c900>" error: did not understand #from:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
Association(Object)>>doesNotUnderstand: #from: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/tree_sum.st:5)
Object: 0 error: return from a dead method context
SystemExceptions.BadReturn(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.BadReturn class(Exception class)>>signal (ExcHandling.st:151)
SmallInteger(Object)>>badReturnError (Object.st:1389)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/tree_sum.st:6)